# fasthtml-tractor

./: .gitignore  LICENSE  README.md  conftest.py  main.py  pyproject.toml  test.py  tractor.js
public/: index.html  preline.min.js
tractor/: __init__.py  client.py  main.min.css  tractor.js
