[tool.poetry]
name = "fasthtml-tractor"
version = "0.1.0a1"
description = "sqlite3 db viewer for FastHTML projects"
authors = ["Philip Nuzhnyi <philip.nuzhnyy@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tractor" }]
repository = "https://github.com/callmephilip/fasthtml-tractor"

[tool.poetry.dependencies]
python = "^3.10"
python-fasthtml = "~0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
